Messaging system Implementation (BACK-END) and Integration with FRONT-END